Added a line of text, with a project idea.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget 
         bibendum sodales, augue velit cursus nunc, 
     </p>
+    <p>
+      Make a simple toy compiler.
+    </p>
 </body>
 </html>
 
